force-app/main/default/objects/Forecast_Participant__c/Forecast_Participant__c.object-meta.xml
<CustomObject>
    <description>Represents a user participating in a forecast period, including their hierarchy position, submission status, delegation, and cached attainment data.</description>
    <label>Forecast Participant</label>
    <nameField><label>Forecast Participant Number</label><displayFormat>FP-{00000}</displayFormat><type>AutoNumber</type></nameField>
    <pluralLabel>Forecast Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>