force-app/main/default/objects/Forecast_Participant__c/fields/Attainment_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Last_Synced__c</fullName>
    <label>Attainment Last Synced</label>
    <type>DateTime</type>
</CustomField>