force-app/main/default/objects/Forecast_Participant__c/fields/Attainment_Pct__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Pct__c</fullName>
    <label>Attainment Pct</label>
    <description>Cached attainment</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>