force-app/main/default/objects/Forecast_Participant__c/fields/Comp_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan_Id__c</fullName>
    <label>Comp Plan Id</label>
    <description>Comp Plan record ID. Will become Lookup in Wave 4.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>