force-app/main/default/objects/Forecast_Participant__c/fields/Current_Rate_Pct__c.field-meta.xml
<CustomField>
    <fullName>Current_Rate_Pct__c</fullName>
    <label>Current Rate Pct</label>
    <description>Cached rate</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>