force-app/main/default/objects/Forecast_Participant__c/fields/Current_Rate_Tier__c.field-meta.xml
<CustomField>
    <fullName>Current_Rate_Tier__c</fullName>
    <label>Current Rate Tier</label>
    <description>Cached tier name</description>
    <type>Text</type>
    <length>50</length>
</CustomField>