force-app/main/default/objects/Forecast_Participant__c/fields/Delegate__c.field-meta.xml
<CustomField>
    <fullName>Delegate__c</fullName>
    <label>Delegate</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Delegated Forecast Participants</relationshipLabel>
    <relationshipName>Delegated_Participants</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>