force-app/main/default/objects/Forecast_Participant__c/fields/Delegate_End__c.field-meta.xml
<CustomField>
    <fullName>Delegate_End__c</fullName>
    <label>Delegate End</label>
    <type>Date</type>
</CustomField>