force-app/main/default/objects/Forecast_Participant__c/fields/Delegate_Start__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Start__c</fullName>
    <label>Delegate Start</label>
    <type>Date</type>
</CustomField>