force-app/main/default/objects/Forecast_Participant__c/fields/Email_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipients__c</fullName>
    <label>Email Recipients</label>
    <type>Text</type>
    <length>255</length>
</CustomField>