force-app/main/default/objects/Forecast_Participant__c/fields/Frozen_On__c.field-meta.xml
<CustomField>
    <fullName>Frozen_On__c</fullName>
    <label>Frozen On</label>
    <type>DateTime</type>
</CustomField>