force-app/main/default/objects/Forecast_Participant__c/fields/Hierarchy_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Source_Id__c</fullName>
    <label>Hierarchy Source Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>