force-app/main/default/objects/Forecast_Participant__c/fields/Hierarchy_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Source_Type__c</fullName>
    <label>Hierarchy Source Type</label>
    <type>Text</type>
    <length>30</length>
</CustomField>