force-app/main/default/objects/Forecast_Participant__c/fields/Is_Summary__c.field-meta.xml
<CustomField>
    <fullName>Is_Summary__c</fullName>
    <label>Is Summary</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>