force-app/main/default/objects/Forecast_Participant__c/fields/Level_Label__c.field-meta.xml
<CustomField>
    <fullName>Level_Label__c</fullName>
    <label>Level Label</label>
    <type>Text</type>
    <length>50</length>
</CustomField>