force-app/main/default/objects/Forecast_Participant__c/fields/Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Local_Currency__c</fullName>
    <label>Local Currency</label>
    <type>Text</type>
    <length>5</length>
</CustomField>