force-app/main/default/objects/Forecast_Participant__c/fields/Next_Tier_Distance__c.field-meta.xml
<CustomField>
    <fullName>Next_Tier_Distance__c</fullName>
    <label>Next Tier Distance</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>