force-app/main/default/objects/Forecast_Participant__c/fields/Next_Tier_Name__c.field-meta.xml
<CustomField>
    <fullName>Next_Tier_Name__c</fullName>
    <label>Next Tier Name</label>
    <type>Text</type>
    <length>50</length>
</CustomField>