force-app/main/default/objects/Forecast_Participant__c/fields/Quota_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Quota_Achieved__c</fullName>
    <label>Quota Achieved</label>
    <description>Cached from Quota__c</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>