force-app/main/default/objects/Forecast_Participant__c/fields/Quota_Id__c.field-meta.xml
<CustomField>
    <fullName>Quota_Id__c</fullName>
    <label>Quota Id</label>
    <description>Quota record ID for drill-through. Will become Lookup in Wave 4.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>