force-app/main/default/objects/Forecast_Participant__c/fields/Quota_Target__c.field-meta.xml
<CustomField>
    <fullName>Quota_Target__c</fullName>
    <label>Quota Target</label>
    <description>Cached from Quota__c</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>