force-app/main/default/objects/Forecast_Participant__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <label>Reports To</label>
    <type>Lookup</type>
    <referenceTo>Forecast_Participant__c</referenceTo>
    <relationshipLabel>Direct Reports</relationshipLabel>
    <relationshipName>Direct_Reports</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>