force-app/main/default/objects/Forecast_Participant__c/fields/Saved_On__c.field-meta.xml
<CustomField>
    <fullName>Saved_On__c</fullName>
    <label>Saved On</label>
    <type>DateTime</type>
</CustomField>