force-app/main/default/objects/Forecast_Participant__c/fields/Scope_Name__c.field-meta.xml
<CustomField>
    <fullName>Scope_Name__c</fullName>
    <label>Scope Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>