force-app/main/default/objects/Forecast_Participant__c/fields/Scope_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Scope_Parent_Id__c</fullName>
    <label>Scope Parent Id</label>
    <type>Text</type>
    <length>50</length>
</CustomField>