force-app/main/default/objects/Forecast_Participant__c/fields/Scope_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Scope_Transfer__c</fullName>
    <label>Scope Transfer</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>