force-app/main/default/objects/Forecast_Participant__c/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <label>Sub Region</label>
    <type>Text</type>
    <length>100</length>
</CustomField>