force-app/main/default/objects/Forecast_Participant__c/fields/Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Submission_Status__c</fullName>
    <label>Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not_Started</fullName><default>false</default><label>Not_Started</label></value>
            <value><fullName>Saved</fullName><default>false</default><label>Saved</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
            <value><fullName>Frozen</fullName><default>false</default><label>Frozen</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>