force-app/main/default/objects/Forecast_Participant__c/fields/Summary_Source_Ids__c.field-meta.xml
<CustomField>
    <fullName>Summary_Source_Ids__c</fullName>
    <label>Summary Source Ids</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>