force-app/main/default/objects/Forecast_Participant__c/fields/Transfer_From_Scope__c.field-meta.xml
<CustomField>
    <fullName>Transfer_From_Scope__c</fullName>
    <label>Transfer From Scope</label>
    <type>Text</type>
    <length>50</length>
</CustomField>