force-app/main/default/objects/Forecast_Participant__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Forecast Participations</relationshipLabel>
    <relationshipName>Forecast_Participations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>